# Sources
bin_PROGRAMS = messyfoods
messyfoods_CPPFLAGS = -Wall -std=c++11 -DPKGDATADIR='"$(pkgdatadir)"'
messyfoods_SOURCES = \
  src/Audio.cpp \
  src/Audio.h \
  src/Cereal.cpp \
  src/Cereal.h \
  src/CollisionBox.cpp \
  src/CollisionBox.h \
  src/Egg.cpp \
  src/Egg.h \
  src/G_Miscfuncandvar.cpp \
  src/G_Miscfuncandvar.h \
  src/Laser.cpp \
  src/Laser.h \
  src/Mouse.cpp \
  src/Mouse.h \
  src/Player.cpp \
  src/Player.h \
  src/Resources.h \
  src/Shield.cpp \
  src/Shield.h \
  src/UI.cpp \
  src/UI.h \
  src/Text.cpp \
  src/Text.h \
  src/BaseEnemy.cpp \
  src/BaseEnemy.h \
  src/Toast.cpp \
  src/Toast.h \
  src/Bacon.cpp \
  src/Bacon.h \
  src/main.cpp

# Data - Fonts
fontsdatadir = $(pkgdatadir)/fonts
dist_fontsdata_DATA = \
  data/fonts/ehsmb.ttf

# Data - Music
musicdatadir = $(pkgdatadir)/music
dist_musicdata_DATA = \
  data/music/mainMenuTheme.wav

# Data - SFX
sfxdatadir = $(pkgdatadir)/sfx
dist_sfxdata_DATA = \
  data/sfx/bulletFire.wav \
  data/sfx/enemyDeath.wav \
  data/sfx/laserFire.wav \
  data/sfx/shieldImpact.wav

# Data - Textures
texturesdatadir = $(pkgdatadir)/textures
dist_texturesdata_DATA = \
  data/textures/egg.png \
  data/textures/background.png \
  data/textures/cereal.png \
  data/textures/toast.png\
  data/textures/bacon.png \
  data/textures/laser.png \
  data/textures/cerealbowl.png \
  data/textures/shield.png 

# Data - UI
uidatadir = $(pkgdatadir)/textures/ui
dist_uidata_DATA = \
  data/textures/ui/help.png \
  data/textures/ui/helppage.png \
  data/textures/ui/quit.png \
  data/textures/ui/start.png
