# The name of the program to be compiled.
# The "bin" prefix will install it in the "bin" directory.
# The "PROGRAMS" suffix marks it as a program to be compiled.
#
# 
https://www.gnu.org/software/automake/manual/html_node/Program-Sources.html#Program-Sources
bin_PROGRAMS = messyfoods

# A list of all of the source code files.
# The "SOURCES" suffix marks it as source code.
#
# 
https://www.gnu.org/software/automake/manual/html_node/Program-Sources.html#Program-Sources
messyfoods_SOURCES = \
  Audio.cpp \
  Audio.h \
  Cereal.cpp \
  Cereal.h \
  CollisionBox.cpp \
  CollisionBox.h \
  Egg.cpp \
  Egg.h \
  G_Miscfuncandvar.cpp \
  G_Miscfuncandvar.h \
  Laser.cpp \
  Laser.h \
  Mouse.cpp \
  Mouse.h \
  Player.cpp \
  Player.h \
  Shield.cpp \
  Shield.h \
  UI.cpp \
  UI.h \
  Text.cpp \
  Text.h \
  BaseEnemy.cpp \
  BaseEnemy.h \
  Toast.cpp \
  Toast.h \
  BlackAsteroid.cpp \
  BlackAsteroid.h \
  main.cpp

# NOTE: "CPP" stands for "C Pre-Processor".
#
# 
https://www.gnu.org/software/automake/manual/html_node/Program-and-Library-Variables.html
messyfoods_CPPFLAGS = -Wall -std=c++11
