SUBDIRS = ui

# Define a new directory.
#
# The "dir" suffix marks this as a directory variable.
#
# The rest of the word (the "not dir" part) becomes
# a Makefile directory variable that can be used in
# other areas.
#
# https://www.gnu.org/software/automake/manual/html_node/Uniform.html
texturesdatadir = $(pkgdatadir)/textures

# The "dist" prefix will ensure that these files are
# kept in the distribution release of the package.
#
# The "DATA" suffix marks this as data files for
# the package.
#
# The word inbetween the prefix and suffix must match
# the name of a directory, declared with the suffix
# "dir".
#
# https://www.gnu.org/software/automake/manual/html_node/Data.html
dist_texturesdata_DATA = \
  egg.png \
  background.png \
  cereal.png \
  toast.png\
  laser.png \
  moonbase.png \
  shield.png \
  blackasteroid.png
